# src/adapters/controllers/projects/project-controller.ts
@@ -1,17 +1,18 @@
 import { Request as EXRequest } from "express";
-import { Body, Controller, Get, Path, Post, Route, SuccessResponse, Tags, Request, Security } from "tsoa";
+import { Body, Controller, Get, Path, Post, Route, SuccessResponse, Tags, Request, Security, Example } from "tsoa";
 import { inject, provideSingleton } from "../../../middlewares/inversify/util";
-import { ProjectCreateParams, ProjectResponse } from "./project-model";
+import { ProjectCreateParams, ProjectResponse, ExampleProjectResponse } from "./project-model";
 import { IProjectUseCase } from "../../../usecases/projects/project-interface";
 import { ProjectUsecase } from "../../../usecases/projects/project-usecase";
 import { APISecurity } from "../../../infrastructure/express/authentication";
 
-@Route("internal/projects")
-@Tags("project-internal")
+@Route("projects")
+@Tags("Project")
 @provideSingleton(ProjectController)
 export class ProjectController extends Controller {
   @inject(ProjectUsecase) private projectUsecase: IProjectUseCase;
 
+  @Example<ProjectResponse>(ExampleProjectResponse)
   @Post()
   @Security(APISecurity.AUTH0_USER)
   @SuccessResponse("200", "Return a project")
@@ -19,6 +20,7 @@ export class ProjectController extends Controller {
     return ProjectResponse.fromDTO(await this.projectUsecase.createProject(ProjectCreateParams.toDTO(params)));
   }
 
+  @Example<ProjectResponse>(ExampleProjectResponse)
   @Get("{id}")
   @Security(APISecurity.AUTH0_USER)
   @SuccessResponse("200", "Return a project")
@@ -26,6 +28,7 @@ export class ProjectController extends Controller {
     return ProjectResponse.fromDTO(await this.projectUsecase.findProject(id));
   }
 
+  @Example<ProjectResponse[]>([ExampleProjectResponse])
   @Get()
   @Security(APISecurity.AUTH0_USER)
   @SuccessResponse("200", "Return projects")
