# src/infrastructure/express/swagger.json
@@ -51,7 +51,7 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/internal/projects": {
+		"/projects": {
 			"post": {
 				"operationId": "CreateProject",
 				"responses": {
@@ -61,13 +61,22 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/ProjectResponse"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"id": "52907745-7672-470e-a803-a2f8feb52944",
+											"name": "Project1",
+											"status": "active"
+										}
+									}
 								}
 							}
 						}
 					}
 				},
 				"tags": [
-					"project-internal"
+					"Project"
 				],
 				"security": [
 					{
@@ -98,13 +107,24 @@
 										"$ref": "#/components/schemas/ProjectResponse"
 									},
 									"type": "array"
+								},
+								"examples": {
+									"Example 1": {
+										"value": [
+											{
+												"id": "52907745-7672-470e-a803-a2f8feb52944",
+												"name": "Project1",
+												"status": "active"
+											}
+										]
+									}
 								}
 							}
 						}
 					}
 				},
 				"tags": [
-					"project-internal"
+					"Project"
 				],
 				"security": [
 					{
@@ -114,7 +134,7 @@
 				"parameters": []
 			}
 		},
-		"/internal/projects/{id}": {
+		"/projects/{id}": {
 			"get": {
 				"operationId": "FindProject",
 				"responses": {
@@ -124,13 +144,22 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/ProjectResponse"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"id": "52907745-7672-470e-a803-a2f8feb52944",
+											"name": "Project1",
+											"status": "active"
+										}
+									}
 								}
 							}
 						}
 					}
 				},
 				"tags": [
-					"project-internal"
+					"Project"
 				],
 				"security": [
 					{
@@ -147,70 +176,6 @@
 						}
 					}
 				]
-			}
-		},
-		"/public/projects/{id}": {
-			"get": {
-				"operationId": "FindProjectForPublic",
-				"responses": {
-					"200": {
-						"description": "Return a project",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/ProjectResponse"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"project-public"
-				],
-				"security": [
-					{
-						"API_KEY": []
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/public/projects": {
-			"get": {
-				"operationId": "GetProjectsForPublic",
-				"responses": {
-					"200": {
-						"description": "Return projects",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/ProjectResponse"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"project-public"
-				],
-				"security": [
-					{
-						"API_KEY": []
-					}
-				],
-				"parameters": []
 			}
 		}
 	},
